PBL/alb.tf
#External Load Balancer
resource "aws_lb" "ext-alb" {
    name     = "ext-alb"
    internal = false
    security_groups = [
    aws_security_group.ext-alb-sg.id,
    ]
    subnets = [
    aws_subnet.public[0].id,
    aws_subnet.public[1].id
    ]
    tags = merge(
        var.tags,
        {
            Name = "ACS-ext-alb"
        },
    )
    ip_address_type    = "ipv4"
    load_balancer_type = "application"
}

resource "aws_lb_target_group" "nginx-tgt" {
    health_check {
        interval            = 10
        path                = "/healthstatus"
        protocol            = "HTTPS"
        timeout             = 5
        healthy_threshold   = 5
        unhealthy_threshold = 2
    }
    name        = "nginx-tgt"
    port        = 443
    protocol    = "HTTPS"
    target_type = "instance"
    vpc_id      = aws_vpc.main.id
}

resource "aws_lb_listener" "nginx-listner" {
    load_balancer_arn = aws_lb.ext-alb.arn
    port              = 443
    protocol          = "HTTPS"
    certificate_arn   = aws_acm_certificate_validation.hracompany.certificate_arn
    default_action {
        type             = "forward"
        target_group_arn = aws_lb_target_group.nginx-tgt.arn
    }
}



####### Internal Load Balancers #######
# for webserrvers
resource "aws_lb" "ialb" {
  name     = "ialb"
  internal = true
  security_groups = [
    aws_security_group.int-alb-sg.id,
  ]
  subnets = [
    aws_subnet.private[0].id,
    aws_subnet.private[1].id
  ]
  tags = merge(
    var.tags,
    {
      Name = "ACS-int-alb"
    },
  )
  ip_address_type    = "ipv4"
  load_balancer_type = "application"
}

# --- target group  for wordpress -------
resource "aws_lb_target_group" "wordpress-tgt" {
  health_check {
    interval            = 10
    path                = "/healthstatus"
    protocol            = "HTTPS"
    timeout             = 5
    healthy_threshold   = 5
    unhealthy_threshold = 2
  }
  name        = "wordpress-tgt"
  port        = 443
  protocol    = "HTTPS"
  target_type = "instance"
  vpc_id      = aws_vpc.main.id
}
# --- target group for tooling -------
resource "aws_lb_target_group" "tooling-tgt" {
  health_check {
    interval            = 10
    path                = "/healthstatus"
    protocol            = "HTTPS"
    timeout             = 5
    healthy_threshold   = 5
    unhealthy_threshold = 2
  }
  name        = "tooling-tgt"
  port        = 443
  protocol    = "HTTPS"
  target_type = "instance"
  vpc_id      = aws_vpc.main.id
}
